--- a/index.html
+++ b/index.html
@@ -7,69 +7,69 @@
         <title>Vite App</title>
     </head>
     <body>
-        <main>
-            <header>
-                <nav>
-                    <div class="flex items-center justify-between w-full py-4 px-6 sm:py-5 lg:py-6 sm_xl:px-16 lg:px-[89px]">
-                        <div class="flex items-center justify-between mx-auto w-full">
-                            <div class="flex items-center justify-between w-full gap-4 md:gap-8 lg:gap-12 text-center">
-                                <!-- LEFT SIDE -->
-                                <img
-                                    class="md:w-[114px] hidden sm:block"
-                                    src="./images/giarddesign.png"
-                                    alt="logo"
-                                    class=""
-                                >
-                                <!-- RIGHT SIDE -->
-                                <div class="items-center justify-between sm:justify-end w-full flex">
-                                    <div class="sm:items-center sm:gap-4 sm_xl:gap-8 text-sm hidden sm:flex flex-wrap">
-                                        <a class="flex items-center group" href="#">
-                                            <span class="text-xs md:text-sm">Oferta</span>
-                                            <svg class="w-6 h-4 fill-current group-hover:text-gray-600 hover:fill-gray-400 focus:fill-gray-400">
-                                                <use href="./images/icons.svg#arrow"></use>
-                                            </svg>
-                                        </a>
-                                        <a href="#" class="text-xs md:text-sm">O firmie</a>
-                                        <a href="#" class="text-xs md:text-sm">Realizacje</a>
-                                        <a href="#" class="text-xs md:text-sm">Kontakt</a>
-                                    </div>
-                                    <button class="ml-5 sm_xl:ml-8">
-                                        <svg class="w-6 h-6 hover:fill-gray-400 focus:fill-gray-400">
-                                            <use href="./images/icons.svg#magnifying-loop"></use>
+        <header>
+            <nav>
+                <div class="flex items-center justify-between w-full py-4 px-6 sm:py-5 lg:py-6 sm_xl:px-16 lg:px-[89px]">
+                    <div class="flex items-center justify-between mx-auto w-full">
+                        <div class="flex items-center justify-between w-full gap-4 md:gap-8 lg:gap-12 text-center">
+                            <!-- LEFT SIDE -->
+                            <img
+                                class="md:w-[114px] hidden sm:block"
+                                src="./images/giarddesign.png"
+                                alt="logo"
+                                class=""
+                            >
+                            <!-- RIGHT SIDE -->
+                            <div class="items-center justify-between sm:justify-end w-full flex">
+                                <div class="sm:items-center sm:gap-4 sm_xl:gap-8 text-sm hidden sm:flex flex-wrap">
+                                    <a class="flex items-center group" href="#">
+                                        <span class="text-xs md:text-sm">Oferta</span>
+                                        <svg class="w-6 h-4 fill-current group-hover:text-gray-600 hover:fill-gray-400 focus:fill-gray-400">
+                                            <use href="./images/icons.svg#arrow"></use>
                                         </svg>
-                                    </button>
-                                    <button class="sm:hidden" type="button" data-menu-open>
-                                        <svg class="w-6 h-6 hover:fill-gray-400 focus:fill-gray-400">
-                                            <use href="./images/icons.svg#burger"></use>
-                                        </svg>
-                                    </button>
+                                    </a>
+                                    <a href="#" class="text-xs md:text-sm">O firmie</a>
+                                    <a href="#" class="text-xs md:text-sm">Realizacje</a>
+                                    <a href="#" class="text-xs md:text-sm">Kontakt</a>
                                 </div>
+                                <button class="ml-5 sm_xl:ml-8">
+                                    <svg class="w-6 h-6 hover:fill-gray-400 focus:fill-gray-400">
+                                        <use href="./images/icons.svg#magnifying-loop"></use>
+                                    </svg>
+                                </button>
+                                <button class="sm:hidden" type="button" data-menu-open>
+                                    <svg class="w-6 h-6 hover:fill-gray-400 focus:fill-gray-400">
+                                        <use href="./images/icons.svg#burger"></use>
+                                    </svg>
+                                </button>
                             </div>
                         </div>
                     </div>
-                    <!-- MOBILE MENU MODAL -->
-                    <div class="fixed right-0 bottom-0 h-full w-[300px] bg-[#FFE6C0] shadow-xl hidden" data-menu>
-                        <!-- CLOSE ICON -->
-                        <div class="flex justify-end p-8">
-                            <button class="hover:scale-[1.1] hover:transition-transform" data-menu-close>
-                                <svg class="w-10 h-10">
-                                    <use href="./images/icons.svg#icon-close"></use>
-                                </svg>
-                            </button>
-                        </div>
-                        <!-- MENU ITEMS -->
-                        <div class="ml-[33%] flex flex-col gap-10 text-2xl">
-                            <a href="#" class="hover:scale-[1.1] hover:text-gray-700 hover:transition-all">Home</a>
-                            <a href="#" class="hover:scale-[1.1] hover:text-gray-700 hover:transition-all">Benefits</a>
-                            <a href="#" class="hover:scale-[1.1] hover:text-gray-700 hover:transition-all">Our Classes</a>
-                            <a href="#" class="hover:scale-[1.1] hover:text-gray-700 hover:transition-all">Contact Us</a>
-                        </div>
+                </div>
+                <!-- MOBILE MENU MODAL -->
+                <div class="fixed right-0 z-40 bottom-0 h-full w-[300px] bg-[#FFE6C0] shadow-xl hidden" data-menu>
+                    <!-- CLOSE ICON -->
+                    <div class="flex justify-end p-8">
+                        <button class="hover:scale-[1.1] hover:transition-transform" data-menu-close>
+                            <svg class="w-10 h-10">
+                                <use href="./images/icons.svg#icon-close"></use>
+                            </svg>
+                        </button>
                     </div>
-                </nav>
-            </header>
+                    <!-- MENU ITEMS -->
+                    <div class="ml-[33%] flex flex-col gap-10 text-2xl">
+                        <a href="#" class="hover:scale-[1.1] hover:text-gray-700 hover:transition-all">Home</a>
+                        <a href="#" class="hover:scale-[1.1] hover:text-gray-700 hover:transition-all">Benefits</a>
+                        <a href="#" class="hover:scale-[1.1] hover:text-gray-700 hover:transition-all">Our Classes</a>
+                        <a href="#" class="hover:scale-[1.1] hover:text-gray-700 hover:transition-all">Contact Us</a>
+                    </div>
+                </div>
+            </nav>
+        </header>
+        <main>
             <section>
-                <div class="px-6 sm:pr-0 sm:pl-6 sm_xl:pl-0 py-8 sm:py-0 sm:flex sm:items-center bg-[#DCC1AB]">
-                    <div class="sm_xl:pl-16 lg:pl-[89px] sm:py-8 md:py-10 lg:py-12 mb-6 sm:mb-0 sm:pb-8 sm_xl:mr-12 lg:mr-16 sm:w-[50%] sm:mr-6">
+                <div class="relative px-6 sm_xl:pr-0 sm_xl:pl-0 py-8 sm_xl:py-0 sm_xl:flex sm_xl:items-center bg-[#DCC1AB]">
+                    <div class="sm_xl:pl-16 lg:pl-[89px] sm_xl:py-8 md:py-10 lg:py-12 mb-6 sm_xl:mb-0 sm_xl:pb-8 sm_xl:mr-12 lg:mr-16 sm_xl:w-[50%]">
                         <h1 class="font-montserrat text-3xl md:text-5xl lg:text-6xl mb-6 sm:mr-9 md:mr-11">
                             Nowoczesna aranżacja
                             Twojego ogrodu
@@ -82,27 +82,95 @@
                             <a class="bg-transparent border-solid border-2 border-[#1B5B31] rounded-3xl outline-none py-3 px-6 text-[#1B5B31] w-[208px] md:w-auto" href="">Zobacz nasze realizacje</a>
                         </div>
                     </div>
-                    <div class="relative slider sm:w-[50%] sm:overflow-hidden">
+                    <div class="relative slider sm_xl:w-[50%] sm_xl:overflow-hidden">
+                        <div class="bg-[#F5F0EC] absolute bottom-0 right-0 w-[30%] h-[60px] lg:h-[100px] z-10 hidden sm_xl:block"></div>
                         <div class="slider" data-slider>
                             <div class="slide-container" slide>
                                 <img class="w-full" src="./images/garden-arrangement.png" alt="Modern Garden Arrangement">
                             </div>
                             <div class="slide-container hidden" slide>
-                                <img class="w-full" src="./images/garden-arrangement-2.png" alt="Modern Garden Arrangement">
+                                <img class="w-full" src="./images/garden-arrangement.png" alt="Modern Garden Arrangement">
                             </div>
                             <div class="slide-container hidden" slide>
-                                <img class="w-full" src="./images/garden-arrangement-3.png" alt="Modern Garden Arrangement">
+                                <img class="w-full" src="./images/garden-arrangement.png" alt="Modern Garden Arrangement">
                             </div>
                             <!-- Add more slide containers here -->
                         </div>
-                        <button class="absolute left-0 bottom-0 p-2" data-prev-slide>&larr; Prev</button>
-                        <button class="absolute right-0 bottom-0 p-2" data-next-slide>Next &rarr;</button>
+                        <div class="relative z-20">
+                            <button class=" absolute left-4 bottom-32 sm:bottom-52 sm_xl:left-auto sm_xl:right-12 md:right-14 sm_xl:bottom-2 lg:bottom-6 lg:right-20 p-2 hover:scale-[1.1] hover:transition-transform" data-prev-slide>
+                                <svg class="w-6 h-6">
+                                    <use href="./images/icons.svg#arrow-left"></use>
+                                </svg>
+                            </button>
+                            <button class="absolute bottom-32 sm:bottom-52 right-4 sm_xl:right-2 md:right-2 lg:right-6 sm_xl:bottom-2 lg:bottom-6 p-2 hover:scale-[1.1] hover:transition-transform" data-next-slide>
+                                <svg class="w-6 h-6">
+                                    <use href="./images/icons.svg#arrow-right"></use>
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="relative px-6 sm_xl:px-16 lg:px-[89px] py-20 md:py-28 lg:py-40 sm_xl:flex sm_xl:flex-col sm_xl:items-start bg-[#F5F0EC]">
+                    <div class="sm_xl:max-w-[64%] lg:max-w-[68%] mb-16">
+                        <span class="text-xs block text-[#1B5B31] mb-3 md:mb-4">Oferta</span>
+                        <h2 class="text-2xl md:text-4xl lg:text-5xl mb-5 md:mb-8 font-montserrat font-semibold">
+                            Działamy
+                            <i>kompleksowo</i>
+                        </h2>
+                        <p class="text-sm md:text-base lg:max-w-[84%]">
+                            Oferujemy kompletną obsługę inwestycji terenów zielonych. Projektujemy nowoczesne ogrody przydomowe oraz rezydencjonalne. Stworzymy dla Ciebie projekt, zwizualizujemy go i&nbsp;wcielimy w&nbsp;życie, a&nbsp;na&nbsp;każdym etapie posłużymy radą i&nbsp;wieloletnim doświadczeniem.
+                        </p>
+                    </div>
+                    <div class="sm_xl:flex">
+                        <div class="bg-white rounded-2xl py-5 px-5 md:py-8 lg:py-12 md:px-8 lg:px-11 mb-9 sm_xl:mb-0 sm_xl:mr-10 lg:mr-16">
+                            <div class="bg-left-top bg-[url('./images/pencil-icon.png')] bg-no-repeat pt-12">
+                                <h3 class="mb-2 md:mb-3 lg:mb-5 text-xl md:text-2xl lg:text-[28px] lg:leading-6 font-montserrat font-semibold pt-5 md:pt-7 lg:pt-9">Projekty</h3>
+                                <p class="mb-10 md:mb-14 lg:mb-16 text-xs md:text-sm">Zaprojektujemy Twój ogród w nowoczesnym stylu i z najlepszym wykorzystaniem istniejącej przestrzeni.</p>
+                                <a class="text-[#1B5B31] flex items-center border-b-[0.5px] border-[#1B5B31] pb-1 max-w-[171px]" href="">
+                                    Dowiedz się więcej
+                                    <svg class="w-4 h-4 fill-current ml-2.5">
+                                        <use href="./images/icons.svg#arrow-right"></use>
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="bg-white rounded-2xl py-5 px-5 md:py-8 lg:py-12 md:px-8 lg:px-11 mb-9 sm_xl:mb-0 sm_xl:mr-10 lg:mr-16">
+                            <div class="bg-left-top bg-[url('./images/eye-icon.png')] bg-no-repeat pt-12">
+                                <h3 class="mb-2 md:mb-3 lg:mb-5 text-xl md:text-2xl lg:text-[28px] lg:leading-6 font-montserrat font-semibold pt-5 md:pt-7 lg:pt-9">Wizualizacje</h3>
+                                <p class="mb-10 md:mb-14 lg:mb-16 text-xs md:text-sm">
+                                    Przedstawimy Ci projekty koncepcyjne w postaci wirtualnego spaceru animowanego w technologii 3D.
+                                </p>
+                                <a class="text-[#1B5B31] flex items-center border-b-[0.5px] border-[#1B5B31] pb-1 max-w-[171px]" href="">
+                                    Dowiedz się więcej
+                                    <svg class="w-4 h-4 fill-current ml-2.5">
+                                        <use href="./images/icons.svg#arrow-right"></use>
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="bg-white rounded-2xl py-5 px-5 md:py-8 lg:py-12 md:px-8 lg:px-11">
+                            <div class="bg-left-top bg-[url('./images/stars-icon.png')] bg-no-repeat pt-12">
+                                <h3 class="mb-2 md:mb-3 lg:mb-5 text-xl md:text-2xl lg:text-[28px] lg:leading-6 font-montserrat font-semibold pt-5 md:pt-7 lg:pt-9">Realizacje</h3>
+                                <p class="mb-10 md:mb-14 lg:mb-16 text-xs md:text-sm">
+                                    Zrealizujemy Twoje marzenie przy użyciu najnowszych rozwiązań i zaawansowanych technologii.
+                                </p>
+                                <a class="text-[#1B5B31] flex items-center border-b-[0.5px] border-[#1B5B31] pb-1 max-w-[207px]" href="">
+                                    Zobacz nasze realizacje
+                                    <svg class="w-4 h-4 fill-current ml-2.5">
+                                        <use href="./images/icons.svg#arrow-right"></use>
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
         </main>
+        <footer></footer>
         <script type="module" src="/scripts/index.js"></script>
         <script type="module" src="/scripts/slider.js"></script>
-        <script type="module" src="./scripts/autoSwitchSlides.js"></script>
+        <!-- <script type="module" src="./scripts/autoSwitchSlides.js"></script> -->
     </body>
 </html>
