feat: added contacts; added animations and changed spacing

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
                             <!-- RIGHT SIDE -->
                             <div class="items-center justify-between sm:justify-end w-full flex">
                                 <div class="sm:items-center sm:gap-4 sm_xl:gap-8 text-sm hidden sm:flex flex-wrap">
-                                    <a class="flex items-center group" href="#">
+                                    <a class="flex items-center group transition-all hover:scale-[1.05] hover:text-gray-700 hover:animate-pulse" href="#">
                                         <span class="text-xs md:text-sm">Oferta</span>
                                         <svg class="w-6 h-4 fill-current group-hover:text-gray-600 hover:fill-gray-400 focus:fill-gray-400">
                                             <use href="./images/icons.svg#arrow"></use>
                                         </svg>
                                     </a>
-                                    <a href="#" class="text-xs md:text-sm">O firmie</a>
-                                    <a href="#" class="text-xs md:text-sm">Realizacje</a>
-                                    <a href="#" class="text-xs md:text-sm">Kontakt</a>
+                                    <a href="#" class="text-xs md:text-sm transition-all hover:scale-[1.05] hover:text-gray-700 hover:animate-pulse">O firmie</a>
+                                    <a href="#" class="text-xs md:text-sm transition-all hover:scale-[1.05] hover:text-gray-700 hover:animate-pulse">Realizacje</a>
+                                    <a href="#" class="text-xs md:text-sm transition-all hover:scale-[1.05] hover:text-gray-700 hover:animate-pulse">Kontakt</a>
                                 </div>
                                 <button class="ml-5 sm_xl:ml-8">
                                     <svg class="w-6 h-6 hover:fill-gray-400 focus:fill-gray-400">
@@ -50,7 +50,7 @@
                 <div class="fixed right-0 z-40 bottom-0 h-full w-[300px] bg-[#FFE6C0] shadow-xl hidden" data-menu>
                     <!-- CLOSE ICON -->
                     <div class="flex justify-end p-8">
-                        <button class="hover:scale-[1.1] hover:transition-transform" data-menu-close>
+                        <button class="hover:scale-[1.1] transition-transform" data-menu-close>
                             <svg class="w-10 h-10">
                                 <use href="./images/icons.svg#icon-close"></use>
                             </svg>
@@ -58,10 +58,10 @@
                     </div>
                     <!-- MENU ITEMS -->
                     <div class="ml-[33%] flex flex-col gap-10 text-2xl">
-                        <a href="#" class="hover:scale-[1.1] hover:text-gray-700 hover:transition-all">Home</a>
-                        <a href="#" class="hover:scale-[1.1] hover:text-gray-700 hover:transition-all">Benefits</a>
-                        <a href="#" class="hover:scale-[1.1] hover:text-gray-700 hover:transition-all">Our Classes</a>
-                        <a href="#" class="hover:scale-[1.1] hover:text-gray-700 hover:transition-all">Contact Us</a>
+                        <a href="#" class="hover:scale-[1.1] hover:text-gray-700 transition-all">Home</a>
+                        <a href="#" class="hover:scale-[1.1] hover:text-gray-700 transition-all">Benefits</a>
+                        <a href="#" class="hover:scale-[1.1] hover:text-gray-700 transition-all">Our Classes</a>
+                        <a href="#" class="hover:scale-[1.1] hover:text-gray-700 transition-all">Contact Us</a>
                     </div>
                 </div>
             </nav>
@@ -78,8 +78,8 @@
                             Marka GiardDesign to wieloletnie doświadczenie i wysoka estetyka realizacji. Oferujemy kompleksowy zakres usługi z indywidualnym podejściem do każdego projektu.
                         </p>
                         <div class="text-xs md:text-sm lg:text-base text-secondary flex flex-col flex-wrap w-full md:flex-row md:flex-nowrap text-center">
-                            <a class="mb-5 md:mb-0 sm_xl:mr-7 lg:mr-9 outline-none bg-[#1B5B31] rounded-3xl py-3 px-6 w-[208px] md:w-auto" href="">Skontaktuj się z nami</a>
-                            <a class="bg-transparent border-solid border-2 border-[#1B5B31] rounded-3xl outline-none py-3 px-6 text-[#1B5B31] w-[208px] md:w-auto" href="">Zobacz nasze realizacje</a>
+                            <a class="mb-5 md:mb-0 sm_xl:mr-7 lg:mr-9 outline-none bg-[#1B5B31] rounded-3xl py-3 px-6 w-[208px] md:w-auto transition-all hover:shadow-borderBlack hover:scale-[1.02] active:scale-[1.05]" href="">Skontaktuj się z nami</a>
+                            <a class="bg-transparent border-solid border-2 border-[#1B5B31] rounded-3xl outline-none py-3 px-6 text-[#1B5B31] w-[208px] md:w-auto transition-all hover:border-none hover:shadow-subtleInnerGray hover:scale-[1.02] active:scale-[1.05]" href="">Zobacz nasze realizacje</a>
                         </div>
                     </div>
                     <div class="relative slider sm_xl:w-[50%] sm_xl:overflow-hidden">
@@ -89,20 +89,20 @@
                                 <img class="w-full" src="./images/garden-arrangement.png" alt="Modern Garden Arrangement">
                             </div>
                             <div class="slide-container hidden" slide>
-                                <img class="w-full" src="./images/garden-arrangement.png" alt="Modern Garden Arrangement">
+                                <img class="w-full" src="./images/garden-arrangement-2.png" alt="Modern Garden Arrangement">
                             </div>
                             <div class="slide-container hidden" slide>
-                                <img class="w-full" src="./images/garden-arrangement.png" alt="Modern Garden Arrangement">
+                                <img class="w-full" src="./images/garden-arrangement-3.png" alt="Modern Garden Arrangement">
                             </div>
                             <!-- Add more slide containers here -->
                         </div>
                         <div class="relative z-20">
-                            <button class="absolute left-4 bottom-32 sm:bottom-52 sm_xl:left-auto sm_xl:right-12 md:right-14 sm_xl:bottom-2 lg:bottom-6 lg:right-20 p-2 hover:scale-[1.1] hover:transition-transform lg_xl:right-[108px] xl:right-[120px]" data-prev-slide>
+                            <button class="absolute left-4 bottom-32 sm:bottom-52 sm_xl:left-auto sm_xl:right-12 md:right-14 sm_xl:bottom-2 lg:bottom-6 lg:right-20 p-2 hover:scale-[1.1] transition-transform lg_xl:right-[108px] xl:right-[120px]" data-prev-slide>
                                 <svg class="w-6 h-6">
                                     <use href="./images/icons.svg#arrow-left"></use>
                                 </svg>
                             </button>
-                            <button class="absolute bottom-32 sm:bottom-52 right-4 sm_xl:right-2 md:right-2 lg:right-6 sm_xl:bottom-2 lg:bottom-6 p-2 hover:scale-[1.1] hover:transition-transform lg_xl:right-10 xl:right-12" data-next-slide>
+                            <button class="absolute bottom-32 sm:bottom-52 right-4 sm_xl:right-2 md:right-2 lg:right-6 sm_xl:bottom-2 lg:bottom-6 p-2 hover:scale-[1.1] transition-transform lg_xl:right-10 xl:right-12" data-next-slide>
                                 <svg class="w-6 h-6">
                                     <use href="./images/icons.svg#arrow-right"></use>
                                 </svg>
@@ -113,7 +113,7 @@
             </section>
             <section>
                 <div class="relative px-6 sm_xl:px-16 lg:px-[89px] py-20 md:py-28 lg:py-40 sm_xl:flex sm_xl:flex-col sm_xl:items-start bg-[#F5F0EC]">
-                    <div class="sm_xl:max-w-[64%] lg:max-w-[68%] mb-16">
+                    <div class="sm_xl:max-w-[68%] sm_xl:pl-12 lg:pl-28 xl:pl-32 lg:max-w-[80%] mb-16">
                         <span class="text-xs block text-[#1B5B31] mb-3 md:mb-4">Oferta</span>
                         <h2 class="text-2xl md:text-4xl lg:text-5xl mb-5 md:mb-8 font-montserrat font-semibold">
                             Działamy
@@ -124,13 +124,13 @@
                         </p>
                     </div>
                     <div class="sm:max-w-[440px] sm:mx-auto sm_xl:max-w-full sm_xl:flex">
-                        <div class="bg-white rounded-2xl py-5 px-5 md:py-8 lg:py-12 md:px-8 lg:px-11 mb-9 sm_xl:mb-0 sm_xl:mr-5 lg:mr-12 xl:mr-16">
+                        <div class="bg-white rounded-2xl py-5 px-5 md:py-8 lg:py-12 md:px-8 lg:px-11 mb-9 sm_xl:mb-0 sm_xl:mr-5 lg:mr-12 xl:mr-16 hover:shadow-subtleGray hover:scale-[1.02] transition-transform">
                             <div class="bg-left-top bg-[url('./images/pencil-icon.png')] bg-no-repeat pt-12">
                                 <h3 class="mb-2 md:mb-3 lg:mb-5 text-xl md:text-2xl lg:text-[28px] lg:leading-6 font-montserrat font-semibold pt-5 md:pt-7 lg:pt-9">Projekty</h3>
                                 <p class="mb-10 md:mb-14 lg:mb-16 text-xs md:text-sm">
-                                    Zaprojektujemy Twój ogród w nowoczesnym stylu i z najlepszym wykorzystaniem istniejącej przestrzeni.
+                                    Zaprojektujemy Twój ogród w&nbsp;nowoczesnym stylu i z najlepszym wykorzystaniem istniejącej przestrzeni.
                                 </p>
-                                <a class="text-[#1B5B31] flex items-center border-b-[0.5px] border-[#1B5B31] pb-1 max-w-[171px] hover:text-green-500 hover:scale-[1.05] hover:transition-all" href="">
+                                <a class="text-[#1B5B31] flex items-center border-b-[0.5px] border-[#1B5B31] pb-1 max-w-[171px] hover:text-green-500 transition-colors animate-bounce" href="">
                                     Dowiedz się więcej
                                     <svg class="w-4 h-4 fill-current ml-2.5">
                                         <use href="./images/icons.svg#arrow-right"></use>
@@ -138,13 +138,13 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="bg-white rounded-2xl py-5 px-5 md:py-8 lg:py-12 md:px-8 lg:px-11 mb-9 sm_xl:mb-0 sm_xl:mr-5 lg:mr-12 xl:mr-16">
+                        <div class="bg-white rounded-2xl py-5 px-5 md:py-8 lg:py-12 md:px-8 lg:px-11 mb-9 sm_xl:mb-0 sm_xl:mr-5 lg:mr-12 xl:mr-16 hover:shadow-subtleGray hover:scale-[1.02] transition-transform">
                             <div class="bg-left-top bg-[url('./images/eye-icon.png')] bg-no-repeat pt-12">
                                 <h3 class="mb-2 md:mb-3 lg:mb-5 text-xl md:text-2xl lg:text-[28px] lg:leading-6 font-montserrat font-semibold pt-5 md:pt-7 lg:pt-9">Wizualizacje</h3>
                                 <p class="mb-10 md:mb-14 lg:mb-16 text-xs md:text-sm">
                                     Przedstawimy Ci projekty koncepcyjne w postaci wirtualnego spaceru animowanego w technologii 3D.
                                 </p>
-                                <a class="text-[#1B5B31] flex items-center border-b-[0.5px] border-[#1B5B31] pb-1 max-w-[171px] hover:text-green-500 hover:scale-[1.05] hover:transition-all" href="">
+                                <a class="text-[#1B5B31] flex items-center border-b-[0.5px] border-[#1B5B31] pb-1 max-w-[171px] hover:text-green-500 transition-colors animate-bounce" href="">
                                     Dowiedz się więcej
                                     <svg class="w-4 h-4 fill-current ml-2.5">
                                         <use href="./images/icons.svg#arrow-right"></use>
@@ -152,13 +152,13 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="bg-white rounded-2xl py-5 px-5 md:py-8 lg:py-12 md:px-8 lg:px-11">
+                        <div class="bg-white rounded-2xl py-5 px-5 md:py-8 lg:py-12 md:px-8 lg:px-11 hover:shadow-subtleGray hover:scale-[1.02] transition-transform">
                             <div class="bg-left-top bg-[url('./images/stars-icon.png')] bg-no-repeat pt-12">
                                 <h3 class="mb-2 md:mb-3 lg:mb-5 text-xl md:text-2xl lg:text-[28px] lg:leading-6 font-montserrat font-semibold pt-5 md:pt-7 lg:pt-9">Realizacje</h3>
                                 <p class="mb-10 md:mb-14 lg:mb-16 text-xs md:text-sm">
                                     Zrealizujemy Twoje marzenie przy użyciu najnowszych rozwiązań i&nbsp;zaawansowanych technologii.
                                 </p>
-                                <a class="text-[#1B5B31] flex items-center border-b-[0.5px] border-[#1B5B31] pb-1 max-w-[207px] hover:text-green-500 hover:scale-[1.05] hover:transition-all" href="">
+                                <a class="text-[#1B5B31] flex items-center border-b-[0.5px] border-[#1B5B31] pb-1 max-w-[207px] hover:text-green-500 transition-colors animate-bounce" href="">
                                     Zobacz nasze realizacje
                                     <svg class="w-4 h-4 fill-current ml-2.5">
                                         <use href="./images/icons.svg#arrow-right"></use>
@@ -183,7 +183,7 @@
                             Każdy projekt to nowe wyzwanie. Dlatego nasz zespół tworzą wykwalifikowani projektanci oraz architekci, których zadaniem jest rozpoznanie i realizacja potrzeb każdego Klienta. Nasza specjalizacja to przestrzenie nowoczesne, które charakteryzuje minimalizm, geometria i elegancka prostota. Tworzymy ogrody małoobsługowe, dostosowane do współczesnego trybu życia.
                         </p>
                         <div class="text-xs md:text-sm lg:text-base flex flex-col flex-wrap w-full md:flex-row md:flex-nowrap text-center">
-                            <a class="bg-transparent border-solid border-2 border-white rounded-3xl outline-none py-3 px-6 w-[184px] md:w-auto flex items-center" href="">
+                            <a class="bg-transparent border-solid border-2 border-white rounded-3xl outline-none py-3 px-6 w-[184px] md:w-auto flex items-center transition-all hover:border-none hover:shadow-subtleInnerGray hover:scale-[1.02] active:scale-[1.05]" href="">
                                 Poznaj nas bliżej
                                 <svg class="w-4 h-4 fill-current ml-3">
                                     <use href="./images/icons.svg#arrow-right"></use>
@@ -195,7 +195,7 @@
             </section>
             <section>
                 <div class="relative pt-16 md:pt-24 px-6 sm_xl:px-0 lg:pt-[120px] bg-[#DCC1AB]">
-                    <div class="sm_xl:max-w-[64%] sm_xl:px-16 lg:px-[89px] lg:max-w-[68%] mb-16 lg:mb-24 sm_xl:flex sm_xl:flex-col">
+                    <div class="sm_xl:max-w-[68%] sm_xl:pl-24 lg:px-40 lg:max-w-[68%] mb-16 lg:mb-24 sm_xl:flex sm_xl:flex-col">
                         <span class="text-xs block text-[#1B5B31] mb-3 md:mb-4">Realizacje</span>
                         <h2 class="text-2xl md:text-4xl lg:text-5xl font-montserrat font-semibold">
                             Nasze
@@ -204,7 +204,7 @@
                     </div>
                     <div id="masonry-container" class="grid grid-cols-3 items-center justify-center mx-auto text-center mxAuto grid-rows-masonry relative">
                         <div class="orange-gradient w-full h-full absolute">
-                            <a class="bg-transparent border-solid border-2 border-black rounded-3xl outline-none py-3 px-6 flex items-center absolute -translate-y-1/2 -translate-x-1/2 left-[50%] bottom-[10%] hover:text-white hover:border-white hover:scale-[1.05] hover:transition-all" href="#">
+                            <a class="bg-transparent border-solid border-2 border-black rounded-3xl outline-none py-3 px-6 flex items-center absolute -translate-y-1/2 -translate-x-1/2 left-[50%] bottom-[10%] hover:text-white hover:border-white hover:scale-[1.02] transition-all active:scale-[1.05]" href="#">
                                 Rozwiń
                                 <svg class="w-4 h-4 fill-current ml-3">
                                     <use href="./images/icons.svg#arrow-bottom"></use>
@@ -223,8 +223,43 @@
                     </div>
                 </div>
             </section>
+            <section>
+                <div class="sm_xl:px-24 md:px-32 lg:px-[200px] py-8 md:py-[52px] lg:py-[60px] sm_xl:flex sm_xl:flex-col sm_xl:items-center bg-[#F5F0EC] text-white px-6 sm_xl:py-10">
+                    <div class="flex flex-col items-center sm:flex-row sm_xl:justify-between bg-[#1B5B31] px-6 sm:px-6 sm_xl:px-10 sm_xl:py-10 py-4 sm:gap-3 md:gap-7 lg:gap-14 md:py-14 lg:py-20 xl:py-[120px] lg:px-28">
+                        <h3 class="lg:text-4xl lg:text-[38px] lg:leading-[44px] text-xl sm_xl:text-2xl md:text-3xl font-montserrat mb-4 sm:mb-0 w-full sm:w-[54%] sm_xl:w-[60%]md:w-[64%] lg:w-[79%]">
+                            Zostańmy w&nbsp;kontakcie!
+                            <br>
+                            Znajdziesz nas na
+                            <span class="italic lg:text-4xl lg:text-[40px]">Instagramie.</span>
+                        </h3>
+                        <div class="w-full sm:w-[46%] sm_xl:w-[40%] md:w-[36%] lg:w-[21%]">
+                            <p class="text-sm md:text-base lg:text-[15px] mb-4 md:mb-6">
+                                Śledź nasze
+                                <br>
+                                najnowsze realizacje!
+                            </p>
+                            <a class="text-sm md:text-base text-[#1B5B31] bg-white border-none rounded-3xl outline-none py-3 px-6 w-[184px] flex items-center justify-center transition-all hover:shadow-subtleInnerGray hover:scale-[1.02] active:scale-[1.05] sm_xl:w-[124px]" href="">
+                                Instagram
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
-        <footer></footer>
+        <footer>
+            <div class="sm_xl:px-24 md:px-32 lg:px-[200px] py-8 md:py-[52px] lg:py-20 sm_xl:flex sm_xl:flex-col sm_xl:items-center bg-black text-white px-6 sm_xl:py-10">
+                <img src="./images/logo-black.png" alt="Giard Logo">
+                <p>Daj znać, co możemy dla Ciebie zrobić!</p>
+                <div class="text-xs md:text-sm lg:text-base flex flex-col flex-wrap w-full md:flex-row md:flex-nowrap text-center">
+                    <a class="bg-transparent border-solid border-2 border-white rounded-3xl outline-none py-3 px-6 w-[184px] md:w-auto flex items-center transition-all hover:border-none hover:shadow-subtleInnerGray hover:scale-[1.02] active:scale-[1.05]" href="">
+                        Poznaj nas bliżej
+                        <svg class="w-4 h-4 fill-current ml-3">
+                            <use href="./images/icons.svg#arrow-right"></use>
+                        </svg>
+                    </a>
+                </div>
+            </div>
+        </footer>
         <script type="module" src="/scripts/index.js"></script>
         <script type="module" src="/scripts/slider.js"></script>
         <script type="module" src="/scripts/masonryLayout.js"></script>
